Fix navbar wrap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,14 @@
     transition: 800ms ease;
 }
 .navbar-brand {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 .navbar-brand .logo {
     height: 40px;
     width: 40px;
     vertical-align: top;
-    margin-right: 4px;
+    margin-right: 3px;
 }
 
 
